--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 pydantic = "^2.6.1"
+pytest = "^8.3.1"
+pyyaml = "^6.0.1"
 
 
 [build-system]
