--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = ">=3.9,<3.13"
 pydantic = "^2.6.1"
 pytest = "^8.3.1"
 pyyaml = "^6.0.1"
+cdflib = "^1.3.1"
+xarray = "^2024.6.0"
 
 
 [build-system]
